<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background = "@color/colorPrimary"
    android:padding="35dp">

    <ImageView
        android:layout_width="163dp"
        android:layout_height="144dp"
        android:layout_below="@id/tctWelcomeAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tctWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginHorizontal="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

    <Button
        android:id="@+id/btnWlcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/girisEkranı"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_above="@id/btnWelcomeRegister"
        android:layout_marginBottom="25dp"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yeni_kullanici_kaydi"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>